# lyretail

./: CHANGELOG.md  Cargo.toml  README.md  demo.sh  rustfmt.toml
src/: app.rs  args.rs  main.rs  ui.rs
src/sources/: file.rs  mod.rs
src/sources/aws/: cloudwatch.rs  mod.rs
src/ui/: base.rs  log_group.rs  mod.rs
