[package]
name = "lyretail"
description = "Lyretail is a command line log processing utility providing a summary view of the log lines seen and capable of operating on streaming or static data"
version = "0.3.0"
edition = "2021"

[dependencies]
anyhow = "1.0.56"
chrono = "0.4.1"
clap = { version = "3.1.6", features = ["derive", "wrap_help"] }
console-subscriber = "0.1.3"
crossterm = { version = "0.23", features = ["event-stream"] }
ctrlc = "3.2.1"
duration-str = "0.3"
drain-flow = { git = "https://github.com/nharring-adjacent/drain-flow" }
futures = "0.3.21"
futures-core = "0.3"
itertools = "0.10.3"
joinery = "2.1.0"
parking_lot = "0.12.0"
tokio = { version = "1.8.3", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1.32"
tracing-subscriber = "0.3.9"
tui = "0.17"
