[package]
name = "lyretail"
description = "Lyretail is a command line log processing utility providing a summary view of the log lines seen and capable of operating on streaming or static data"
version = "0.4.0"
edition = "2021"
license-file = "LICENSE"
authors = ["Nicholas Harring <nharring@gmail.com>"]

[features]
aws = ["dep:aws-config", "dep:aws-sdk-cloudwatchlogs", "dep:aws-sdk-s3", "dep:aws-types"]

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
chrono = "0.4.19"
clap = { version = "3.1.15", features = ["derive", "wrap_help"] }
console-subscriber = "0.1.5"
crossterm = { version = "0.23", features = ["event-stream"] }
ctrlc = "3.2.2"
dateparser = "0.1.6"
duration-str = "0.3"
drain-flow = { git = "https://github.com/nharring-adjacent/drain-flow" }
enum_derive = "0.1"
enum-kinds = "0.5"
futures = "0.3.21"
futures-core = "0.3"
itertools = "0.10.3"
joinery = "2.1.0"
macro-attr = "0.2"
parking_lot = "0.12.0"
tokio = { version = "1.18.1", features = ["full", "tracing"] }
tokio-util = { version = "0.7", features = ["rt"] }
tokio-stream = "0.1.8"
tracing = "0.1.34"
tracing-subscriber = {version = "0.3.11", features=["std", "env-filter"]}
tui = "0.18.0"

# The following are optional for supporting AWS ingest features
aws-config = { version = "0.11.0", optional = true }
aws-sdk-cloudwatchlogs = { version = "0.11.0", optional = true }
aws-sdk-s3 = { version = "0.11.0", optional = true }
aws-types = { version = "0.11.0", optional = true }
